[gd_scene load_steps=15 format=2]

[ext_resource path="res://entities/chest/Chest.gd" type="Script" id=1]
[ext_resource path="res://images/spritesheets/underworld_load-atlas-32x32.png" type="Texture" id=2]
[ext_resource path="res://entities/chest/DetectionPivot.gd" type="Script" id=3]
[ext_resource path="res://entities/chest/DetectionArea.gd" type="Script" id=4]

[sub_resource type="Animation" id=8]
resource_name = "east_active"
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 54, 55, 54, 56, 54 ]
}

[sub_resource type="Animation" id=1]
resource_name = "east_idle"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 54 ]
}

[sub_resource type="Animation" id=7]
resource_name = "north_active"
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 7, 6, 8, 6 ]
}

[sub_resource type="Animation" id=2]
resource_name = "north_idle"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}

[sub_resource type="Animation" id=9]
resource_name = "south_active"
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 38, 39, 38, 40, 38 ]
}

[sub_resource type="Animation" id=3]
resource_name = "south_idle"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 38 ]
}

[sub_resource type="Animation" id=10]
resource_name = "west_active"
length = 0.6
loop = true
step = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.08, 0.16, 0.24, 0.32 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 22, 23, 22, 24, 22 ]
}

[sub_resource type="Animation" id=4]
resource_name = "west_idle"
length = 0.02
tracks/0/type = "value"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 22 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 8, 8 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 8, 4 )

[node name="Chest" type="StaticBody2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
vframes = 16
hframes = 16
frame = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite"]
anims/east_active = SubResource( 8 )
anims/east_idle = SubResource( 1 )
anims/north_active = SubResource( 7 )
anims/north_idle = SubResource( 2 )
anims/south_active = SubResource( 9 )
anims/south_idle = SubResource( 3 )
anims/west_active = SubResource( 10 )
anims/west_idle = SubResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 7 )
shape = SubResource( 5 )

[node name="DetectionPivot" type="Position2D" parent="."]
position = Vector2( 0, 7 )
script = ExtResource( 3 )

[node name="DetectionOffset" type="Position2D" parent="DetectionPivot"]
position = Vector2( 0, -12 )

[node name="DetectionArea" type="Area2D" parent="DetectionPivot/DetectionOffset"]
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionPivot/DetectionOffset/DetectionArea"]
shape = SubResource( 6 )

